# aws-examples

./: README.md
aws-kinesis/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
aws-kinesis/scripts/: build.sh  deploy.sh  destroy.sh  test.sh
aws-kinesis/src/: __init__.py
aws-kinesis/src/common/: __init__.py  clients.py  config.py  exceptions.py  models.py
aws-kinesis/src/handlers/: __init__.py  archive_consumer.py  dashboard_consumer.py  geofence_consumer.py  gps_producer.py
aws-kinesis/src/services/: __init__.py  aggregation_service.py  geofence_service.py  kinesis_service.py
aws-kinesis/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
aws-kinesis/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/kinesis/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
aws-kinesis/terraform/modules/sns/: main.tf  variables.tf
aws-kinesis/tests/: __init__.py  conftest.py
aws-kinesis/tests/integration/: __init__.py  test_kinesis_integration.py
aws-kinesis/tests/unit/: __init__.py  test_aggregation_service.py  test_geofence_service.py  test_models.py
emr-fraud-detection/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
emr-fraud-detection/cloudformation/: deploy-cfn.sh  main.yaml
emr-fraud-detection/cloudformation/nested/: api-gateway.yaml  cloudwatch.yaml  dynamodb.yaml  emr.yaml  iam.yaml  kinesis.yaml  lambda.yaml  s3.yaml  sns.yaml  step-functions.yaml  vpc.yaml
emr-fraud-detection/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
emr-fraud-detection/sam/: samconfig.toml  template.yaml
emr-fraud-detection/scripts/: build-sam.sh  build.sh  deploy-sam.sh  deploy.sh  destroy-sam.sh  destroy.sh  test.sh
emr-fraud-detection/spark/: __init__.py
emr-fraud-detection/spark/jobs/: __init__.py  batch_scoring.py  feature_engineering.py  model_training.py  streaming_scoring.py
emr-fraud-detection/spark/utils/: __init__.py  feature_utils.py  spark_utils.py
emr-fraud-detection/src/common/: __init__.py  clients.py  config.py  exceptions.py  models.py
emr-fraud-detection/src/handlers/: __init__.py  alert_handler.py  ingestion_handler.py  orchestration_handler.py  query_handler.py  stream_processor.py
emr-fraud-detection/src/services/: __init__.py  dynamodb_service.py  emr_service.py  kinesis_service.py  ml_service.py  notification_service.py  s3_service.py
emr-fraud-detection/state-machine/: pipeline.asl.json
emr-fraud-detection/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
emr-fraud-detection/terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/emr/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/kinesis/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/sns/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/step-functions/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
emr-fraud-detection/tests/: __init__.py  conftest.py
emr-fraud-detection/tests/integration/: __init__.py  test_pipeline_integration.py
emr-fraud-detection/tests/unit/: __init__.py  test_emr_service.py  test_kinesis_service.py  test_models.py
healthcare-imaging-lake/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
healthcare-imaging-lake/cloudformation/: deploy-cfn.sh  main.yaml
healthcare-imaging-lake/cloudformation/nested/: athena.yaml  cloudwatch.yaml  glue.yaml  iam.yaml  kms.yaml  lakeformation.yaml  lambda.yaml  s3.yaml
healthcare-imaging-lake/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
healthcare-imaging-lake/glue/: metadata_crawler.py
healthcare-imaging-lake/sam/: samconfig.toml  template.yaml
healthcare-imaging-lake/scripts/: build-sam.sh  build.sh  deploy-sam.sh  deploy.sh  destroy-sam.sh  destroy.sh  test.sh
healthcare-imaging-lake/src/: __init__.py
healthcare-imaging-lake/src/common/: __init__.py  config.py  exceptions.py  models.py
healthcare-imaging-lake/src/handlers/: __init__.py  api_handler.py  catalog_handler.py  ingestion_handler.py  query_handler.py
healthcare-imaging-lake/src/services/: __init__.py  athena_service.py  glue_service.py  kms_service.py  lakeformation_service.py  s3_service.py
healthcare-imaging-lake/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
healthcare-imaging-lake/terraform/modules/athena/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/kms/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/lakeformation/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
healthcare-imaging-lake/terraform/modules/s3/: main.tf  (+2 more)
healthcare-imaging-lake/tests/: __init__.py  conftest.py
healthcare-imaging-lake/tests/integration/: __init__.py
healthcare-imaging-lake/tests/unit/: __init__.py  test_models.py
(+126 files in other folders)
